Fix some stuff based on example solutions, upgrade packages

--- a/package.json
+++ b/package.json
@@ -6,7 +6,17 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "eslint ./src/**/*.{js,jsx} App.js --no-error-on-unmatched-pattern"
+    "lint": "eslint ./src/**/*.{js,jsx} App.js --no-error-on-unmatched-pattern",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*|react-router-native)"
+    ]
   },
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
@@ -28,8 +38,11 @@
     "@expo/webpack-config": "^0.12.29",
     "babel-eslint": "^10.1.0",
     "babel-preset-expo": "~8.1.0",
-    "eslint": "^7.8.1",
-    "eslint-plugin-react": "^7.20.6"
+    "eslint": "^7.9.0",
+    "eslint-plugin-jest": "^24.0.1",
+    "eslint-plugin-react": "^7.20.6",
+    "jest": "^26.4.2",
+    "jest-expo": "^38.0.2"
   },
   "private": true
 }
