--- a/package.json
+++ b/package.json
@@ -26,30 +26,30 @@
     "apollo-boost": "^0.4.9",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
-    "expo": "~38.0.8",
-    "expo-status-bar": "^1.0.2",
+    "expo": "^39.0.0",
+    "expo-status-bar": "~1.0.2",
     "formik": "^2.1.5",
     "graphql": "^15.3.0",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.0.tar.gz",
     "react-native-picker-select": "^8.0.0",
-    "react-native-web": "~0.11.7",
+    "react-native-web": "~0.13.7",
     "react-router-native": "^5.2.0",
     "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "@expo/webpack-config": "^0.12.29",
+    "@expo/webpack-config": "^0.12.16",
     "@testing-library/jest-native": "^3.4.2",
     "@testing-library/react-native": "^7.0.2",
     "babel-eslint": "^10.1.0",
-    "babel-preset-expo": "~8.1.0",
+    "babel-preset-expo": "^8.3.0",
     "eslint": "^7.9.0",
     "eslint-plugin-jest": "^24.0.1",
     "eslint-plugin-react": "^7.20.6",
     "jest": "^26.4.2",
-    "jest-expo": "^38.0.2"
+    "jest-expo": "^39.0.0"
   },
   "private": true
 }
